<resources>
    <string name="app_name">CameraXSample</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="menu_preview">Preview</string>
    <string name="menu_mlkit">ML Kit</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="menu_item_settings">Settings</string>

    <!-- Preference CameraX Preview -->
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_title_camerax_rear_camera_target_resolution">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution">CameraX front camera target resolution</string>

    <!-- Preference Face Detection -->
    <string name="pref_category_title_face_detection">Face detection</string>

    <string name="pref_key_face_detection_landmark_mode">fd_landmark</string>
    <string name="pref_key_face_detection_contour_mode">fd_contour</string>
    <string name="pref_key_face_detection_classification_mode">fd_classification</string>
    <string name="pref_key_face_detection_performance_mode">fd_performance</string>
    <string name="pref_key_face_detection_face_tracking">fd_face_tracking</string>
    <string name="pref_key_face_detection_min_face_size">fd_min_face_size</string>

    <string name="pref_title_face_detection_landmark_mode">Landmark mode</string>
    <string name="pref_title_face_detection_contour_mode">Contour mode</string>
    <string name="pref_title_face_detection_classification_mode">Classification mode</string>
    <string name="pref_title_face_detection_performance_mode">Performance mode</string>
    <string name="pref_title_face_detection_face_tracking">Face tracking</string>
    <string name="pref_title_face_detection_min_face_size">Minimum face size</string>

    <!-- Face detection (Landmark key-value) -->
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">All landmarks</string>

    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>

    <!-- Face detection (Contour key-value) -->
    <string name="pref_entries_face_detector_contour_mode_no_contours">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">All contours</string>

    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>

    <!-- Face detection (Classification key-value) -->
    <string name="pref_entries_face_detector_classification_mode_no_classifications">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">All classifications</string>

    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>

    <!-- Face detection (Performance mode key-value) -->
    <string name="pref_entries_face_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Accurate</string>

    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>

    <!-- Face detection (Min face size) -->
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>

</resources>