<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:enabled="true"
        android:key="@string/pref_category_key_camera"
        android:title="@string/pref_category_title_camera"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="@string/pref_key_camerax_rear_camera_target_resolution"
            android:persistent="true"
            android:title="@string/pref_title_camerax_rear_camera_target_resolution"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="@string/pref_key_camerax_front_camera_target_resolution"
            android:persistent="true"
            android:title="@string/pref_title_camerax_front_camera_target_resolution"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:enabled="true"
        android:title="@string/pref_category_title_face_detection"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="@string/pref_entry_values_face_detector_landmark_mode_no_landmarks"
            android:entries="@array/pref_entries_face_detector_landmark_mode"
            android:entryValues="@array/pref_entry_values_face_detector_landmark_mode"
            android:key="@string/pref_key_face_detection_landmark_mode"
            android:persistent="true"
            android:title="@string/pref_title_face_detection_landmark_mode"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="@string/pref_entry_values_face_detector_contour_mode_all_contours"
            android:entries="@array/pref_entries_face_detector_contour_mode"
            android:entryValues="@array/pref_entry_values_face_detector_contour_mode"
            android:key="@string/pref_key_face_detection_contour_mode"
            android:persistent="true"
            android:title="@string/pref_title_face_detection_contour_mode"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="@string/pref_entry_values_face_detector_classification_mode_no_classifications"
            android:entries="@array/pref_entries_face_detector_classification_mode"
            android:entryValues="@array/pref_entry_values_face_detector_classification_mode"
            android:key="@string/pref_key_face_detection_classification_mode"
            android:persistent="true"
            android:title="@string/pref_title_face_detection_classification_mode"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="@string/pref_entry_values_face_detector_performance_mode_fast"
            android:entries="@array/pref_entries_face_detector_performance_mode"
            android:entryValues="@array/pref_entry_values_face_detector_performance_mode"
            android:key="@string/pref_key_face_detection_performance_mode"
            android:persistent="true"
            android:title="@string/pref_title_face_detection_performance_mode"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_face_detection_face_tracking"
            android:persistent="true"
            android:title="@string/pref_title_face_detection_face_tracking"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="0.1"
            android:dialogMessage="@string/pref_dialog_message_face_detector_min_face_size"
            android:key="@string/pref_key_face_detection_min_face_size"
            android:persistent="true"
            android:title="@string/pref_title_face_detection_min_face_size"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>